2005-04-12 James Turner <james@worldforge.org>

	* Mercator/Terrain.cpp: when adding an area to a segment, check if
	  any shaders now intersect the segment, and if so, add a surface for
	  them.
	  
	* Mercator/Terrain.cpp: re-order Segment building code in setBasePoint,
	  so areas are added before surfaces.
	  
	* Mercator/Segment.cpp, Mercator/Segment.h: factor segment invalidation
	  into a helper method, and invalidate segments when an Area is added
	  to a Segment.

	* Mercator/Area.cpp: remove debug code.

2005-04-12  Al Riddoch  <alriddoch@zepler.org>

	* tests/testShader.cpp: Check if a shader being tested intersects with
	  a given Segment before attempting to populate it.

2005-04-12  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Terrain.cpp, Mercator/Segment.cpp: Fix use of iterators
	  in for loops to be more efficient.

2005-04-12 James Turner <james@worldforge.org>

	* Mercator/Terrain.cpp: formatting / style changes to appease the
	  great dark lord of Soton.

2005-04-12 James Turner <james@worldforge.org>

	* Mercator/Shader.h: change checkIntersects to work on Segments
	  (as the comments suggest it originally did).
	  
	* Mercator/Terrain.cpp, Mercator/Terrain.h: when adding a shader,
	  clients must now specify a unique integer ID, which is used
	  to identify the shader in a Segment's surfacestore. As a result,
	  the Shaderstore is now a std::map<>. When adding shaders to
	  a Segment, checkIntersects is now used to only add shaders which
	  affect the segment.
	  
	* Mercator/Segment.cpp, Mercator/Segment.h: change Surfacestore to
	  be sparse, implement as a map, where the index value is the ID of
	  the shader which generated the surface.
	  
	* Mercator/AreaShader.cpp, Mercator/AreaShader.h, 
	  Mercator/DepthShader.h, Mercator/DepthShader.cpp,
	  Mercator/FillShader.cpp, Mercator/FillShader.h,
	  Mercator/GrassShader.cpp, Mercator/GrassShader.h,
	  Mercator/ThresholdShader.cpp, Mercator/ThresholdShader.h: