@@ -1,3 +1,5 @@
+Think carefully about whether Surface needs a writable reference to Segment.
+
 * How about a class for handling building sections of arbitrary size.
   Uses quasi random techniques to define the pattern of building elements,
   with hopefully an efficient way to render.
